bin/tests/snapshots/main__redundant_pattern_bind_fix.snap
---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/redundant_pattern_bind.nix
+++ tests/data/redundant_pattern_bind.nix [fixed]
@@ -1 +1 @@
-{ ... }  @ inputs: null
+inputs: null
