bin/tests/snapshots/main__redundant_pattern_bind_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[tests/data/redundant_pattern_bind.nix:1:1]
   │
 1 │ { ... }  @ inputs: null
   · ────────┬────────  
   ·         ╰────────── This pattern bind is redundant, use inputs instead
───╯
