bin/tests/snapshots/main__unquoted_uri_fix.snap
---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/unquoted_uri.nix
+++ tests/data/unquoted_uri.nix [fixed]
@@ -1 +1 @@
-github:nerdypepper/statix
+"github:nerdypepper/statix"
