bin/tests/snapshots/main__unquoted_uri_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W12] Warning: Found unquoted URI expression
   ╭─[tests/data/unquoted_uri.nix:1:1]
   │
 1 │ github:nerdypepper/statix
   · ────────────┬────────────  
   ·             ╰────────────── Consider quoting this URI expression
───╯
